--- a/job.ipynb
+++ b/job.ipynb
@@ -2066,22 +2066,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45048bf0-9f2a-423c-997f-2ce007b6c6f2",
+   "cell_type": "markdown",
+   "id": "417b3d65-c55a-45fd-a1e3-5d3e7d111cc5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "1. **Handling Missing Values**  \n",
-    "   We have already verified that there are no missing values in the dataset, so no imputation is needed. This ensures our data is complete and ready for further processing.  \n",
+    "1. **Handling Missing Values**\n",
+    "   We have already verified that there are no missing values in the dataset, so no imputation is needed. This ensures our data is complete and ready       for further processing.  \n",
     "\n",
-    "2. **Handling Duplicates**  \n",
-    "   We have already checked that there are no duplicate rows in the dataset. Removing duplicates is crucial to prevent bias and redundancy in model training,\n",
-    "   but since none are present, no modifications are required.  \n",
+    "2. **Handling Duplicates**\n",
+    "   We have already checked that there are no duplicate rows in the dataset. Removing duplicates is crucial to prevent bias and redundancy in model         training, but since none are present, no modifications are required.  \n",
     "       \n",
     "3. **Removing Numerical Values from Job Descriptions**\n",
-    "   In this step, we remove all numerical values from the job descriptions using a regular expression. The goal is to eliminate numbers that do not contribute to meaningful analysis of job titles, descriptions, \n",
-    "   or skills. A function was created to match and remove digits, and the cleaned job descriptions were stored in a new column for further processing. This ensures the text data remains focused on\n",
+    "   In this step, we remove all numerical values from the job descriptions using a regular expression. The goal is to eliminate numbers that do not         contribute to meaningful analysis of job titles, descriptions, \n",
+    "   or skills. A function was created to match and remove digits, and the cleaned job descriptions were stored in a new column for further processing.      This ensures the text data remains focused on\n",
     "   relevant words and phrases.\n"
    ]
   },
