--- a/job.ipynb
+++ b/job.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "**Introduction**\n",
     "\n",
-    "With the fast-paced evolution of the job market, job seekers often struggle to find relevant job opportunities that align with their skills and expertise. Traditional job-matching systems rely heavily on keyword-based filtering, which often results in inaccurate recommendations.\n",
+    "Choosing the right career can be challenging, especially when job seekers struggle to identify roles that align with their skills and expertise. Traditional job-matching systems rely heavily on keyword-based filtering, often leading to inaccurate recommendations. With the fast-paced evolution of the job market, there is a growing need for a smarter, more personalized approach to career guidance.\n",
     "\n",
-    "Our project aims to develop an AI-powered job recommendation system that analyzes user skills and suggests suitable job opportunities. Using machine learning and natural language processing (NLP), our system will leverage the Job Skill Set Dataset to generate intelligent recommendations that improve career discovery and hiring efficiency.\n",
+    "Our project focuses on developing an AI-powered job recommendation system that leverages machine learning and natural language processing (NLP) to suggest suitable job opportunities based on a user’s skill set. Using the Job Skill Set Dataset, which includes job titles, descriptions, and required skills, we aim to analyze patterns in job requirements and user capabilities to enhance job matching accuracy. This system will provide intelligent, data-driven career recommendations, improving both career discovery for job seekers and hiring efficiency for employers.\n",
     "\n",
     "**Problem Definition**\n",
     "Challenges in Traditional Job Matching:\n",
@@ -34,7 +34,7 @@
     "\n",
     "3️⃣ *Almasa & Shahad* – Analyze dataset, explore variables, handle missing values, and generate visualizations.  \n",
     "\n",
-    "4️⃣ *Sara* – Preprocesses data, applies transformations, normalization, and documents all steps.\n",
+    "4️⃣ *Sara* – Preprocesses data, including transformations, normalization, and documents all steps.\n",
     "\n",
     "**Project Scope:**\n",
     "✅ Skill Extraction from Job Descriptions – Using NLP models to identify required skills.\n",
