Updated Jupyter Notebook

--- a/job.ipynb
+++ b/job.ipynb
@@ -5,13 +5,13 @@
    "id": "ac74c94c-b53d-4f1a-ad0b-aac06f90a07a",
    "metadata": {},
    "source": [
-    "**Introduction**\n",
+    "Introduction\n",
     "\n",
     "With the fast-paced evolution of the job market, job seekers often struggle to find relevant job opportunities that align with their skills and expertise. Traditional job-matching systems rely heavily on keyword-based filtering, which often results in inaccurate recommendations.\n",
     "\n",
     "Our project aims to develop an AI-powered job recommendation system that analyzes user skills and suggests suitable job opportunities. Using machine learning and natural language processing (NLP), our system will leverage the Job Skill Set Dataset to generate intelligent recommendations that improve career discovery and hiring efficiency.\n",
     "\n",
-    "**Problem Definition**\n",
+    "Problem Definition\n",
     "Challenges in Traditional Job Matching:\n",
     "Lack of skill-based recommendations – Most job boards focus on job titles rather than the actual skills required.\n",
     "Keyword-based filtering – Conventional methods fail to understand contextual skills, leading to irrelevant job suggestions.\n",
@@ -22,26 +22,26 @@
     "✔ Provide personalized job recommendations using AI-driven skill matching.\n",
     "✔ Bridge the skill gap by highlighting missing skills required for desired roles.\n",
     "\n",
-    "**Why This Problem?**\n",
+    "Why This Problem?\n",
     "🔹 The Skills Gap – Many job seekers have the right skills but struggle to match them with suitable job openings.\n",
     "🔹 Inefficient Resume-Job Matching – Current systems often ignore contextual skill relevance.\n",
     "🔹 The Growing Role of AI in Recruitment – Machine learning models can significantly enhance hiring efficiency and reduce hiring bias.\n",
     "\n",
-    "**Team Members and Roles:**\n",
-    "1️⃣ *Basmah* – Writes project introduction, problem definition, scope, and expected impact.  \n",
+    "Team Members and Roles:\n",
+    "1️⃣ Basmah – Writes project introduction, problem definition, scope, and expected impact.  \n",
     "\n",
-    "2️⃣ *AlAnoud* – Organizes dataset, creates Jupyter Notebook, and describes dataset purpose and source.  \n",
+    "2️⃣ AlAnoud – Organizes dataset, creates Jupyter Notebook, and describes dataset purpose and source.  \n",
     "\n",
-    "3️⃣ *Almasa & Shahad* – Analyze dataset, explore variables, handle missing values, and generate visualizations.  \n",
+    "3️⃣ Almasa & Shahad – Analyze dataset, explore variables, handle missing values, and generate visualizations.  \n",
     "\n",
-    "4️⃣ *Sara* – Preprocesses data, applies transformations, normalization, and documents all steps.\n",
+    "4️⃣ Sara – Preprocesses data, applies transformations, normalization, and documents all steps.\n",
     "\n",
-    "**Project Scope:**\n",
+    "Project Scope:\n",
     "✅ Skill Extraction from Job Descriptions – Using NLP models to identify required skills.\n",
     "✅ Job Recommendation System – Building an AI-driven model to match users with relevant jobs based on their skills.\n",
     "✅ Performance Evaluation – Assessing the accuracy of recommendations using real-world job market data.\n",
     "\n",
-    "**Expected Impact and Outcomes:**\n",
+    "Expected Impact and Outcomes:\n",
     "🎯 Enhanced job search experience – AI-driven recommendations reduce job search time.\n",
     "🎯 More accurate job matching – Skill-based matching ensures candidates receive relevant job suggestions.\n",
     "🎯 Empowering career growth – Users can identify missing skills and upskill for better job opportunities.\n",
