--- a/job.ipynb
+++ b/job.ipynb
@@ -5,47 +5,75 @@
    "id": "ac74c94c-b53d-4f1a-ad0b-aac06f90a07a",
    "metadata": {},
    "source": [
-    "Introduction\n",
+    "**Introduction**\n",
     "\n",
     "Choosing the right career can be challenging, especially when job seekers struggle to identify roles that align with their skills and expertise. Traditional job-matching systems rely heavily on keyword-based filtering, often leading to inaccurate recommendations. With the fast-paced evolution of the job market, there is a growing need for a smarter, more personalized approach to career guidance.\n",
     "\n",
     "Our project focuses on developing an AI-powered job recommendation system that leverages machine learning and natural language processing (NLP) to suggest suitable job opportunities based on a user’s skill set. Using the Job Skill Set Dataset, which includes job titles, descriptions, and required skills, we aim to analyze patterns in job requirements and user capabilities to enhance job matching accuracy. This system will provide intelligent, data-driven career recommendations, improving both career discovery for job seekers and hiring efficiency for employers.\n",
     "\n",
-    "Problem Definition\n",
+    "**Problem Definition**\n",
     "Challenges in Traditional Job Matching:\n",
     "Lack of skill-based recommendations – Most job boards focus on job titles rather than the actual skills required.\n",
     "Keyword-based filtering – Conventional methods fail to understand contextual skills, leading to irrelevant job suggestions.\n",
     "Time-consuming job search – Candidates spend excessive time searching for roles that truly fit their expertise.\n",
-    "Our Solution\n",
+    "\n",
+    "**Our Solution**\n",
     "Our system will:\n",
-    "✔ Analyze user skills and map them to relevant job opportunities.\n",
-    "✔ Provide personalized job recommendations using AI-driven skill matching.\n",
-    "✔ Bridge the skill gap by highlighting missing skills required for desired roles.\n",
+    "- Analyze user skills and map them to relevant job opportunities.\n",
+    "- Provide personalized job recommendations using AI-driven skill matching.\n",
+    "- Bridge the skill gap by highlighting missing skills required for desired roles.\n",
     "\n",
     "Why This Problem?\n",
-    "🔹 The Skills Gap – Many job seekers have the right skills but struggle to match them with suitable job openings.\n",
-    "🔹 Inefficient Resume-Job Matching – Current systems often ignore contextual skill relevance.\n",
-    "🔹 The Growing Role of AI in Recruitment – Machine learning models can significantly enhance hiring efficiency and reduce hiring bias.\n",
+    "- The Skills Gap – Many job seekers have the right skills but struggle to match them with suitable job openings.\n",
+    "- Inefficient Resume-Job Matching – Current systems often ignore contextual skill relevance.\n",
+    "- The Growing Role of AI in Recruitment – Machine learning models can significantly enhance hiring efficiency and reduce hiring bias.\n",
     "\n",
     "Team Members and Roles:\n",
-    "1️⃣ Basmah – Writes project introduction, problem definition, scope, and expected impact.  \n",
+    "1. **Basmah** – Writes project introduction, problem definition, scope, and expected impact.  \n",
     "\n",
-    "2️⃣ AlAnoud – Organizes dataset, creates Jupyter Notebook, and describes dataset purpose and source.  \n",
+    "2. **AlAnoud** – Organizes dataset, creates Jupyter Notebook, and describes dataset purpose and source.  \n",
     "\n",
-    "3️⃣ Almasa & Shahad – Analyze dataset, explore variables, handle missing values, and generate visualizations.  \n",
+    "3. **Almasa & Shahad** – Analyze dataset, explore variables, handle missing values, and generate visualizations.  \n",
     "\n",
-    "4️⃣ Sara – Preprocesses data, including transformations, normalization, and documents all steps.\n",
+    "4. **Sara Jaza**– Preprocesses data, including transformations, normalization, and documents all steps.\n",
     "\n",
-    "Project Scope:\n",
-    "✅ Skill Extraction from Job Descriptions – Using NLP models to identify required skills.\n",
-    "✅ Job Recommendation System – Building an AI-driven model to match users with relevant jobs based on their skills.\n",
-    "✅ Performance Evaluation – Assessing the accuracy of recommendations using real-world job market data.\n",
+    "**Project Scope:**\n",
+    "- Skill Extraction from Job Descriptions – Using NLP models to identify required skills.\n",
+    "- Job Recommendation System – Building an AI-driven model to match users with relevant jobs based on their skills.\n",
+    "- Performance Evaluation – Assessing the accuracy of recommendations using real-world job market data.\n",
     "\n",
-    "Expected Impact and Outcomes:\n",
-    "🎯 Enhanced job search experience – AI-driven recommendations reduce job search time.\n",
-    "🎯 More accurate job matching – Skill-based matching ensures candidates receive relevant job suggestions.\n",
-    "🎯 Empowering career growth – Users can identify missing skills and upskill for better job opportunities.\n",
-    "🎯 Improved hiring efficiency – Employers find better-matched candidates faster, reducing hiring costs and time."
+    "**Expected Impact and Outcomes:**\n",
+    "1. Enhanced job search experience – AI-driven recommendations reduce job search time.\n",
+    "2. More accurate job matching – Skill-based matching ensures candidates receive relevant job suggestions.\n",
+    "3. Empowering career growth – Users can identify missing skills and upskill for better job opportunities.\n",
+    "4. Improved hiring efficiency – Employers find better-matched candidates faster, reducing hiring costs and time.\n",
+    "--------------------------------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681787ad-d0ba-4b46-92ad-2c93cdf7d2b0",
+   "metadata": {},
+   "source": [
+    "**Dataset Goal:**\n",
+    "The Job Skill Set dataset is designed for use in machine learning projects related to job matching, skill extraction, and natural language processing (NLP) tasks. This dataset includes detailed information about job roles, job descriptions, and associated skill sets, enabling developers and researchers to build and evaluate models for career recommendation systems, resume parsing, and skill inference.\n",
+    "\n",
+    "**Purpose of Collecting This Dataset:**\n",
+    "The purpose of collecting this dataset is to support the development and research of intelligent models that can:\n",
+    "-Match jobs with candidates based on skills.\n",
+    "-Extract skills from resumes and job descriptions.\n",
+    "-Use machine learning techniques to enhance recruitment processes and job recommendations.\n",
+    "\n",
+    "**Dataset Source/Link:**\n",
+    "The dataset is available on Kaggle, and can be accessed using the following link: https://www.kaggle.com/datasets/batuhanmutlu/job-skill-set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4237bbd8-cfac-44da-ba60-e46acf4d9cc2",
+   "metadata": {},
+   "source": [
+    "**General information and Summary of the dataset:**\n"
    ]
   },
   {
