--- a/job.ipynb
+++ b/job.ipynb
@@ -73,7 +73,7 @@
    "id": "4237bbd8-cfac-44da-ba60-e46acf4d9cc2",
    "metadata": {},
    "source": [
-    "**General information and Summary of the dataset:**\n"
+    "**General information and Summary of the dataset:**"
    ]
   },
   {
