Updated Supervised Learning notebook with necessary changes

--- a/Supervised Learning/Supervised Learning.ipynb
+++ b/Supervised Learning/Supervised Learning.ipynb
@@ -1070,8 +1070,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "c7d48bfb-0b02-4338-828e-97f30c4c9c3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.88      0.94        42\n",
+      "           1       0.96      0.93      0.95        56\n",
+      "           2       0.70      0.76      0.73        41\n",
+      "           3       0.92      0.91      0.91        53\n",
+      "           4       0.68      0.76      0.72        42\n",
+      "\n",
+      "    accuracy                           0.85       234\n",
+      "   macro avg       0.85      0.85      0.85       234\n",
+      "weighted avg       0.86      0.85      0.86       234\n",
+      "\n",
+      "Accuracy: 0.8547008547008547\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv(r\"C:\\Users\\almas\\AIproject_job_recomndation\\Dataset\\transformed_job_dataset.csv\")\n",
+    "\n",
+    "# Selecting the feature columns (job descriptions and skill sets)\n",
+    "feature_columns = [col for col in data.columns if 'desc_' in col or 'skill_' in col]\n",
+    "\n",
+    "# Features and Target\n",
+    "X = data[feature_columns]\n",
+    "y = data['category']\n",
+    "\n",
+    "# Encoding the categorical target variable\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "\n",
+    "# Splitting the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y_encoded, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create an SVM classifier with a linear kernel\n",
+    "svm_model = SVC(kernel='linear', class_weight='balanced')\n",
+    "\n",
+    "# Training the SVM classifier\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predicting the categories\n",
+    "y_pred = svm_model.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8e2f21fd-f8fc-4675-af0f-4f64d9749e46",
+   "id": "f09723af-1f6a-4da5-8178-7aad1984122f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1093,7 +1161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
