Updated Supervised Learning notebook with changes

--- a/Supervised Learning/Supervised Learning.ipynb
+++ b/Supervised Learning/Supervised Learning.ipynb
@@ -2,7 +2,97 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "35ec62c5-d581-4880-bf29-e065c3490e6d",
+   "id": "aabedb1c-62cd-412a-90a9-82c8bcdf8eba",
+   "metadata": {},
+   "source": [
+    "**Optimizing Job Classification: Addressing Dataset Complexity and Model Performance Challenges**\n",
+    "\n",
+    "After phase one (Analyzing & preprocessing dataset), we implemented a supervised machine learning model using two algorithms: Support Vector Machine (SVM) and Neural Network. Despite ensuring accurate preprocessing, the model's performance remained suboptimal, with low accuracy rates.\n",
+    "\n",
+    "To address this, we revisited the preprocessing stage multiple times, adjusting our strategies to enhance the model's effectiveness. Upon a broader analysis, we identified key issues contributing to the poor performance. Our dataset, comprising 1,116 entries, was relatively small for the complexity of the task, especially given the high variance and diversity in job titles, skill sets, and job descriptions.\n",
+    "\n",
+    "The primary challenge was the vast diversity and large scale of the input features (skill sets and job descriptions) and the output feature (job title), which hindered the model’s ability to learn effectively due to the overfitting and underfitting risks associated with high feature variability in a limited dataset.\n",
+    "\n",
+    "To make the learning task feasible, we made several strategic adjustments:\n",
+    "\n",
+    "Simplification of Output Labels: We replaced the diverse job titles with broader job categories, which are(HR, Information Technology, Sales, Finance, and Business Development). This reduction in output complexity helped decrease the variability in labels, simplifying the classification task.\n",
+    "\n",
+    "Reduction of Input Features: We condensed the array of skill sets and job descriptions to the top 10 relevant terms. This step focused the model on the most significant features, reducing the impact of less relevant or noisy data and enhancing the learning process by simplifying the input space.\n",
+    "\n",
+    "Enhanced Data Cleaning: Further cleaning and preprocessing were conducted to refine the input features and ensure a more robust dataset for training. This was crucial for improving the signal-to-noise ratio, making patterns in the data more detectable for the learning algorithms.\n",
+    "\n",
+    "These modifications aimed to provide a clearer, more structured learning path for the machine learning algorithms, thereby improving the model's accuracy in classifying job categories based on skill sets and job descriptions. By reducing the complexity of both input and output data, we enhanced the model's ability to identify and learn from underlying patterns more effectively.\n",
+    "\n",
+    "**Here is the illustration below of why we are reducing job title skill sets and job titles**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "76b8880d-5c73-4b03-842a-23cefe2f94ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Unique Job Skill Sets per Category:\n",
+      " category\n",
+      "BUSINESS-DEVELOPMENT      239\n",
+      "FINANCE                   236\n",
+      "HR                        220\n",
+      "INFORMATION-TECHNOLOGY    240\n",
+      "SALES                     232\n",
+      "Name: job_skill_set, dtype: int64\n",
+      "\n",
+      " Unique Job Titles per Category:\n",
+      " category\n",
+      "BUSINESS-DEVELOPMENT      127\n",
+      "FINANCE                   192\n",
+      "HR                         90\n",
+      "INFORMATION-TECHNOLOGY    132\n",
+      "SALES                     182\n",
+      "Name: job_title, dtype: int64\n",
+      "\n",
+      "Unique Job Descriptions per Category:\n",
+      " category\n",
+      "BUSINESS-DEVELOPMENT      239\n",
+      "FINANCE                   236\n",
+      "HR                        220\n",
+      "INFORMATION-TECHNOLOGY    240\n",
+      "SALES                     232\n",
+      "Name: job_description, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load your datase\n",
+    "df = pd.read_csv(r\"C:\\Users\\almas\\AIproject_job_recomndation\\Dataset\\old_job_dataset.csv\")  \n",
+    "\n",
+    "\n",
+    "df['job_skill_set'] = df['job_skill_set'].apply(lambda x: x.strip(\"[]\").replace(\"'\", \"\").split(', ') if isinstance(x, str) else [])\n",
+    "\n",
+    "df['job_skill_set'] = df['job_skill_set'].apply(tuple)\n",
+    "\n",
+    "df['job_description'] = df['job_description'].astype(str)\n",
+    "\n",
+    "unique_job_skill_sets = df.groupby('category')['job_skill_set'].nunique()\n",
+    "print(\"\\n Unique Job Skill Sets per Category:\\n\", unique_job_skill_sets)\n",
+    "\n",
+    "unique_job_titles = df.groupby('category')['job_title'].nunique()\n",
+    "print(\"\\n Unique Job Titles per Category:\\n\", unique_job_titles)\n",
+    "\n",
+    "unique_job_descriptions = df.groupby('category')['job_description'].nunique()\n",
+    "print(\"\\nUnique Job Descriptions per Category:\\n\", unique_job_descriptions)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc2cd69-7db3-4c8a-a2f6-908ca05d9c8f",
    "metadata": {},
    "source": [
     "**Building a Supervised Learning Model**"
@@ -1070,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "c7d48bfb-0b02-4338-828e-97f30c4c9c3b",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1180,14 @@
       "   macro avg       0.85      0.85      0.85       234\n",
       "weighted avg       0.86      0.85      0.86       234\n",
       "\n",
-      "Accuracy: 0.8547008547008547\n"
+      "Accuracy: 0.8547008547008547\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[37  0  0  1  4]\n",
+      " [ 0 52  0  2  2]\n",
+      " [ 0  1 31  1  8]\n",
+      " [ 0  1  3 48  1]\n",
+      " [ 0  0 10  0 32]]\n"
      ]
     }
    ],
@@ -1100,6 +1197,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
     "\n",
     "# Load the dataset\n",
     "data = pd.read_csv(r\"C:\\Users\\almas\\AIproject_job_recomndation\\Dataset\\transformed_job_dataset.csv\")\n",
@@ -1131,15 +1229,19 @@
     "print(classification_report(y_test, y_pred))\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "\n",
+    "# Confusion Matrix\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(\"\\nConfusion Matrix:\\n\", conf_matrix)\n",
     "\n",
-    "\n",
-    "\n"
+    "# Evaluation Method 2: K-Fold Cross-Validation\n",
+    "kfold = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_scores = cross_val_score(svm_model, X, y_encoded, cv=kfold, scoring='accuracy')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f09723af-1f6a-4da5-8178-7aad1984122f",
+   "id": "c006f5be-1e0d-4dbf-a861-e44bc857fd24",
    "metadata": {},
    "outputs": [],
    "source": []
