--- a/Supervised Learning/Supervised Learning.ipynb
+++ b/Supervised Learning/Supervised Learning.ipynb
@@ -1370,7 +1370,7 @@
    "source": [
     "The performance results of the neural network and SVM models highlight important differences in their ability to perform on new, unseen data. The neural network achieved a test accuracy of 78.21%, with precision, recall, and F1 score values of 0.7907, 0.7821, and 0.7824, respectively. While these results are satisfactory, the neural network's performance was lower compared to the SVM model. This difference could be attributed to the neural network's sensitivity to dataset size. Neural networks generally require larger datasets to learn complex patterns effectively and avoid overfitting.\n",
     "\n",
-    "On the other hand, the SVM model performed better overall, achieving a test accuracy of 85.47%. The SVM also exhibited strong precision, recall, and F1 scores, with values of 0.86, 0.85, and 0.86, respectively. It demonstrated particularly high precision and recall for most categories, including a perfect score of 1.00 for class 0. The model's 10-fold cross-validation results also showed consistent performance, with a mean accuracy of 89.89%. Additionally, the bias-variance tradeoff analysis revealed that the SVM achieved a high training accuracy of 97.94% and a test accuracy of 87.40%. These findings suggest that the SVM is more effective in handling smaller datasets by focusing on the most informative support vectors, which helps maintain stable performance and generalization.\n",
+    "On the other hand, the SVM model performed better overall, achieving a test accuracy of 85.47%. The SVM also exhibited strong precision, recall, and F1 scores, with values of 0.86, 0.85, and 0.86, respectively. It demonstrated particularly high precision and recall for most categories, including a perfect score of 1.00 for class 0. The model's 10-fold cross-validation results also showed consistent performance, with a mean accuracy of 89.89%. These findings suggest that the SVM is more effective in handling smaller datasets by focusing on the most informative support vectors, which helps maintain stable performance and generalization.\n",
     "\n",
     "In conclusion, the SVM model outperformed the neural network in terms of test accuracy, stability, and generalization, making it more suitable for this task, especially when working with relatively small datasets."
    ]
@@ -1392,7 +1392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
