--- a/Unsupervised Learning/Unsupervised Learning.ipynb
+++ b/Unsupervised Learning/Unsupervised Learning.ipynb
@@ -643,7 +643,7 @@
     "\n",
     "   **Conclusion**: Both algorithms perform very well in terms of recall, with DBSCAN having a slight edge.\n",
     "\n",
-    "   **K-Means is the best algorithm for this dataset** because it produces better-defined clusters (higher Silhouette Score) and has slightly higher cluster purity (higher BCubed Precision). While DBSCAN has a slightly higher BCubed Recall, its poor Silhouette Score and low precision make it less suitable for your dataset. Stick with K-Means for your job recommendation system.\n",
+    "   **K-Means is the better algorithm for this dataset** as it provides a better balance between cluster separation and cluster purity. Despite some limitations in precision, it offers a reasonable approach to handling the inherent complexities and overlapping nature of job titles within the dataset. The moderate Silhouette Score and low precision highlight the challenging nature of the data, possibly due to its heterogeneity and the high dimensionality of the features involved.\n",
     "</div>"
    ]
   },
