--- a/Generative AI/Generative AI.ipynb
+++ b/Generative AI/Generative AI.ipynb
@@ -435,6 +435,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a27863bb-ca96-43a7-9480-90960b5a196d",
+   "metadata": {},
+   "source": [
+    "# Interactive Job Recommendation System "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "372d104c-373b-44f5-a793-ba64833bef33",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-family: 'Times New Roman', Times, serif; font-size: 18px;\"> In this section, we will enhance the system’s interactivity by allowing users to input their skills and experience level directly in natural text format. Based on this input, the system will process the data and generate personalized job recommendations that align with the user’s skills and experience.\n",
+    "<br><br>\n",
+    "To add more value, the system will provide a detailed comparative analysis of the recommended jobs. This analysis will include key job requirements, salary ranges for entry, mid, and senior levels, growth potential, recommended certifications, and market demand—tailored to the user’s skill set and experience level.\n",
+    "<br><br>\n",
+    "Additionally, the system will offer a career action plan, providing specific steps to help users close any skill gaps, pursue relevant certifications, and optimize their job search. It will also include practical advice on improving the user’s resume, LinkedIn profile, and interview preparation.\n",
+    "<br><br>\n",
+    "To enhance the user experience, we will integrate the grouped dataset alongside the transformed dataset, allowing users to input their skills in a natural text format. This will ensure that the system can match user input to the available skills in a more intuitive and user-friendly way, making the process smoother and more accessible.</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "ed8aa479-28b2-4e90-be3c-6f844c8a20aa",
@@ -750,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
